# rag-lite-kit

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  project-intro.md  release-post.md  resume-snippets.md
examples/: sample_docs.json
rag_lite_kit/: api.py  cli.py  config.py  embeddings.py  llm.py  loaders.py  models.py  pipeline.py  prompts.py  retriever.py  splitter.py  store.py
tests/: test_embeddings.py  test_pipeline.py  test_prompts.py  test_splitter.py  test_store.py
