[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-lite-kit"
version = "0.2.0"
description = "A lightweight open-source RAG starter kit for knowledge assistant prototypes"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Pole lai"}
]
dependencies = [
  "fastapi>=0.115.0",
  "pydantic>=2.8.0",
  "uvicorn>=0.30.0"
]

[project.optional-dependencies]
local = [
  "chromadb>=0.5.0",
  "sentence-transformers>=3.0.0",
  "numpy>=1.26.0"
]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0"
]

[project.scripts]
rag-lite-kit = "rag_lite_kit.cli:main"

[tool.setuptools]
packages = ["rag_lite_kit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
